tests/errors/semantic/blocking/HEADER_WRONG_NUMBER_TYPES_INCLASS.py
#$ header class Point(public)
#$ header method __init__(Point, int)
#$ header method incr(Point, int)

class Point(object):
    def __init__(self, x , y):
        return x

    def incr(self, x, y):
        x   =  x + 1
